fixed altools.json and moved the pypannel to its right spot

--- a/Projects.json
+++ b/Projects.json
@@ -1,7 +1,7 @@
 {
     "settings": {
         "author": "",
-        "homeFolder": "asdasda",
+        "homeFolder": "",
         "Style": "Default"
     },
     "Projects": {}
